--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
   fluttertoast: ^8.1.2
+  tmdb_api: ^2.1.4
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
