--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   fluttertoast: ^8.1.2
   tmdb_api: ^2.1.4
   google_fonts: ^4.0.3
+  splashscreen: ^1.3.5
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
