--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   splashscreen: ^1.3.5
   flutter_spinkit: ^5.1.0
   flutter_native_splash: ^2.2.17
+  google_nav_bar: ^5.0.6
+  cloud_firestore: ^4.4.3
 
 dev_dependencies:
   flutter_test:
