--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_native_splash: ^2.2.17
   google_nav_bar: ^5.0.6
   cloud_firestore: ^4.4.3
+  firebase_storage: ^11.1.0
+  image_picker: ^0.8.7+2
+  shared_preferences: ^2.1.0
+  flutter_launcher_icons: ^0.13.0
 
 dev_dependencies:
   flutter_test:
